# pascal-compiler

./: .gitignore  CMakeLists.txt  assembler.c  assembler.h  astree.c  astree.h  build.sh  clean.sh  globals.h  lex.yy.c  main.c  masm.bat  pascal.l  pascal.y  symtab.c  symtab.h  test.sh  y.tab.c  y.tab.h
examples/: test1.asm  test1.pas  test2.asm  test2.pas  test3.asm  test4.asm  test5.asm
pasLib/: pasLib.lib  paslib.inc
pasLibSrc/: pasLib.c  pasLib.h
